clusters/hetzner/apps/networking/headscale/app/headscale-derp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale-derp
  namespace: networking
  annotations:
    metallb.universe.tf/allow-shared-ip: main
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: headscale
  ports:
    - port: 3478
      name: derp
      protocol: UDP
      targetPort: derp
  externalTrafficPolicy: Cluster
