clusters/hetzner/apps/networking/headscale/app/headscale-ui-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: headscale-ui
  namespace: networking
spec:
  selector:
    app.kubernetes.io/name: headscale-ui
  ports:
    - port: 5000
      name: http
      targetPort: http
