clusters/hetzner/apps/networking/headscale/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale
  namespace: networking
spec:
  ingressClassName: istio
  rules:
    - host: vpn.behn.dev
      http:
        paths:
          - backend:
              service:
                name: headscale
                port:
                  name: http
            path: /
            pathType: Prefix
          - backend:
              service:
                name: headscale-ui
                port:
                  name: http
            path: /ui
            pathType: Prefix
  tls:
    - hosts:
        - vpn.behn.dev
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: headscale
  namespace: istio-system
spec:
  hosts:
    - vpn.behn.dev
  gateways:
    - cluster-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: headscale.networking.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /ui
      route:
        - destination:
            host: headscale-ui.networking.svc.cluster.local
            port:
              number: 5000
